--- a/Market/Views/Items/ItemsListBySellerId.cshtml
+++ b/Market/Views/Items/ItemsListBySellerId.cshtml
@@ -58,6 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Seller.Name)
             </td>
             <td>
+                <a asp-action="CategoriesListByItemId" asp-controller="CategoriesItems" asp-route-id="@item.Id">Add Categories</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="CategoriesListByItemId" asp-controller="CategoriesItems" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
