--- a/Market/Views/CategoriesItems/CategoriesListByItemId.cshtml
+++ b/Market/Views/CategoriesItems/CategoriesListByItemId.cshtml
@@ -5,46 +5,44 @@
 }
 
 <div>
-<h4>Item</h4>
+    <h4>Item</h4>
+    @if (Lib.Media.Image != null)
+    {
+        <img style='width:360px; height:240px;' src="data:image/jpeg;base64,@(Convert.ToBase64String(Lib.Media.Image))" />
+    }
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Item.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.First().Item.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Item.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.First().Item.Description)
+        </dd>
 
-<dl class="row">
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Item.Name)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.First().Item.Name)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Item.Description)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.First().Item.Description)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Item.Image)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.First().Item.Image)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Item.Price)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.First().Item.Price)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Item.Manufacturer)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.First().Item.Manufacturer.Name)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Item.Seller)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.First().Item.Seller.Name)
-    </dd>
-</dl>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Item.Price)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.First().Item.Price)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Item.Manufacturer)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.First().Item.Manufacturer.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Item.Seller)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.First().Item.Seller.Name)
+        </dd>
+    </dl>
 </div>
 
 <h1>List Of Categories</h1>
