--- a/Market/Views/_ViewStart.cshtml
+++ b/Market/Views/_ViewStart.cshtml
@@ -12,6 +12,9 @@
         case Market.Models.RolesEnum.User:
             Layout = "_LayoutUser";
             break;
+        case Market.Models.RolesEnum.LoginedUser:
+            Layout = "_LayoutLoginedUser";
+            break;
     }
 
 }
