--- a/Market/Views/Shared/_LayoutLoginedUser.cshtml
+++ b/Market/Views/Shared/_LayoutLoginedUser.cshtml
@@ -23,15 +23,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">User Home</a>
-                        </li>
-                       
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="LogIn">Log In</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UserCabinet">Cabinet</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Create">Register</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sellers" asp-action="Index">List of markets</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">List of items</a>
+                        </li>
+
+
                         @if (Market.Controllers.UsersController.ActiveUser != null)
                         {
                             <li class="nav-item">
